changed role name

--- a/iam.template.yml
+++ b/iam.template.yml
@@ -7,6 +7,11 @@ Resources:
   WriteConnectFourMatchesPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: WriteToConnectFourRecordPolicy
-      PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:BatchGetItem', 'dynamodb:BatchWriteItem', 'dynamodb:PutItem', 'dynamodb:DeleteItem', 'dynamodb:Scan', 'dynamodb:CreateBackup', 'dynamodb:DescribeStream', 'dynamodb:Query', 'dynamodb:UpdateItem', 'dynamodb:DeleteTable', 'dynamodb:CreateTable', 'dynamodb:DescribeTable', 'dynamodb:GetShardIterator', 'dynamodb:RestoreTableFromBackup', 'dynamodb:GetItem', 'dynamodb:DescribeContinuousBackups', 'dynamodb:DeleteBackup', 'dynamodb:DescribeBackup', 'dynamodb:UpdateTable', 'dynamodb:GetRecords'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConnectFourMatches'}}, {Effect: Allow, Action: ['dynamodb:DescribeReservedCapacityOfferings', 'dynamodb:TagResource', 'dynamodb:UntagResource', 'dynamodb:ListTables', 'dynamodb:DescribeReservedCapacity', 'dynamodb:ListBackups', 'dynamodb:PurchaseReservedCapacityOfferings', 'dynamodb:ListTagsOfResource', 'dynamodb:DescribeTimeToLive', 'dynamodb:DescribeLimits', 'dynamodb:ListStreams'], Resource: '*'}]}
+      PolicyName: WriteConnectFourMatchesPolicy
+      PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:BatchGetItem', 'dynamodb:BatchWriteItem', 'dynamodb:PutItem', 'dynamodb:DeleteItem', 'dynamodb:Scan', 'dynamodb:CreateBackup', 'dynamodb:DescribeStream', 'dynamodb:Query', 'dynamodb:UpdateItem', 'dynamodb:CreateTable', 'dynamodb:DescribeTable', 'dynamodb:GetShardIterator', 'dynamodb:RestoreTableFromBackup', 'dynamodb:GetItem', 'dynamodb:DescribeContinuousBackups', 'dynamodb:DeleteBackup', 'dynamodb:DescribeBackup', 'dynamodb:UpdateTable', 'dynamodb:GetRecords'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConnectFourMatches'}}, {Effect: Allow, Action: ['dynamodb:DescribeReservedCapacityOfferings', 'dynamodb:TagResource', 'dynamodb:UntagResource', 'dynamodb:ListTables', 'dynamodb:DescribeReservedCapacity', 'dynamodb:ListBackups', 'dynamodb:PurchaseReservedCapacityOfferings', 'dynamodb:ListTagsOfResource', 'dynamodb:DescribeTimeToLive', 'dynamodb:DescribeLimits', 'dynamodb:ListStreams'], Resource: '*'}]}
       Roles: [!Ref AddConnectFourMatchRole]
+Outputs:
+  AddConnectFourMatchRole:
+    Value: !GetAtt AddConnectFourMatchRole.Arn
+    Export:
+      Name: AddConnectFourMatchRole
