Added functionality to save connectFourMatch

--- a/Portfolio.Backend.Domain/Portfolio.Backend.Domain.csproj
+++ b/Portfolio.Backend.Domain/Portfolio.Backend.Domain.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Portfolio.Backend.Data\Portfolio.Backend.Data.csproj" />
+    </ItemGroup>
+
 </Project>
