--- a/Portfolio.Backend.Lambda/Portfolio.Backend.Lambda.csproj
+++ b/Portfolio.Backend.Lambda/Portfolio.Backend.Lambda.csproj
@@ -9,4 +9,9 @@
       <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.6.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Portfolio.Backend.Data\Portfolio.Backend.Data.csproj" />
+      <ProjectReference Include="..\Portfolio.Backend.Domain\Portfolio.Backend.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
