--- a/serverless.template.yml
+++ b/serverless.template.yml
@@ -8,7 +8,7 @@ Resources:
   AddConnectFourMatch:
     Type: 'AWS::Lambda::Function'
     Properties:
-      Handler: Portfolio.Backend.Lamda::Portfolio.Backend.Lambda.ConnectFour.ConnectFourFunctions::AddConnectFourMatch
+      Handler: Portfolio.Backend.Lambda::Portfolio.Backend.Lambda.ConnectFour.ConnectFourFunctions::AddConnectFourMatch
       Runtime: "dotnetcore2.1"
       Code:
         S3Bucket: !Ref buildBucketName
