Changed to only have one hashkey

--- a/serverless.template.yml
+++ b/serverless.template.yml
@@ -13,14 +13,15 @@ Resources:
       Code:
         S3Bucket: !Ref buildBucketName
         S3Key: !Ref buildObjectKey
+      Timeout: 30
       Role: !ImportValue AddConnectFourMatchRole
   AddConnectFourMatchPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
       Action: 'lambda:invokeFunction'
-      FunctionName: {"Fn::Sub":"${AddConnectFourMatch.Arn}"}
+      FunctionName: !Sub "${AddConnectFourMatch.Arn}"
       Principal: apigateway.amazonaws.com
-      SourceArn: {"Fn::Sub":"arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${PortfolioApi}/*"}
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${PortfolioApi}/*"
   PortfolioApi:
     Type: 'AWS::ApiGateway::RestApi'
     Properties:
