Added Lambda for adding conference talks to database

--- a/iam.template.yml
+++ b/iam.template.yml
@@ -4,14 +4,28 @@ Resources:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Principal: {Service: [lambda.amazonaws.com]}, Action: ['sts:AssumeRole']}]}
+  AddConferenceTalkRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Principal: {Service: [lambda.amazonaws.com]}, Action: ['sts:AssumeRole']}]}
   WriteConnectFourMatchesPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
       PolicyName: WriteConnectFourMatchesPolicy
       PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:BatchGetItem', 'dynamodb:BatchWriteItem', 'dynamodb:PutItem', 'dynamodb:DeleteItem', 'dynamodb:Scan', 'dynamodb:CreateBackup', 'dynamodb:DescribeStream', 'dynamodb:Query', 'dynamodb:UpdateItem', 'dynamodb:CreateTable', 'dynamodb:DescribeTable', 'dynamodb:GetShardIterator', 'dynamodb:RestoreTableFromBackup', 'dynamodb:GetItem', 'dynamodb:DescribeContinuousBackups', 'dynamodb:DeleteBackup', 'dynamodb:DescribeBackup', 'dynamodb:UpdateTable', 'dynamodb:GetRecords'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConnectFourMatches'}}, {Effect: Allow, Action: ['dynamodb:DescribeReservedCapacityOfferings', 'dynamodb:TagResource', 'dynamodb:UntagResource', 'dynamodb:ListTables', 'dynamodb:DescribeReservedCapacity', 'dynamodb:ListBackups', 'dynamodb:PurchaseReservedCapacityOfferings', 'dynamodb:ListTagsOfResource', 'dynamodb:DescribeTimeToLive', 'dynamodb:DescribeLimits', 'dynamodb:ListStreams'], Resource: '*'}]}
       Roles: [!Ref AddConnectFourMatchRole]
+  WriteConferenceTalksPolicy:
+    Type: 'AWS::IAM::Policy'
+    Properties:
+      PolicyName: WriteConferenceTalksPolicy
+      PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:BatchGetItem', 'dynamodb:BatchWriteItem', 'dynamodb:PutItem', 'dynamodb:DeleteItem', 'dynamodb:Scan', 'dynamodb:CreateBackup', 'dynamodb:DescribeStream', 'dynamodb:Query', 'dynamodb:UpdateItem', 'dynamodb:CreateTable', 'dynamodb:DescribeTable', 'dynamodb:GetShardIterator', 'dynamodb:RestoreTableFromBackup', 'dynamodb:GetItem', 'dynamodb:DescribeContinuousBackups', 'dynamodb:DeleteBackup', 'dynamodb:DescribeBackup', 'dynamodb:UpdateTable', 'dynamodb:GetRecords'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConferenceTalks'}}, {Effect: Allow, Action: ['dynamodb:DescribeReservedCapacityOfferings', 'dynamodb:TagResource', 'dynamodb:UntagResource', 'dynamodb:ListTables', 'dynamodb:DescribeReservedCapacity', 'dynamodb:ListBackups', 'dynamodb:PurchaseReservedCapacityOfferings', 'dynamodb:ListTagsOfResource', 'dynamodb:DescribeTimeToLive', 'dynamodb:DescribeLimits', 'dynamodb:ListStreams'], Resource: '*'}]}
+      Roles: [!Ref AddConferenceTalkRole]
 Outputs:
   AddConnectFourMatchRole:
     Value: !GetAtt AddConnectFourMatchRole.Arn
     Export:
       Name: AddConnectFourMatchRole
+  AddConferenceTalkRole:
+    Value: !GetAtt AddConferenceTalkRole.Arn
+    Export:
+      Name: AddConferenceTalkRole
