Added GetConferenceTalks Function

--- a/iam.template.yml
+++ b/iam.template.yml
@@ -8,6 +8,10 @@ Resources:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Principal: {Service: [lambda.amazonaws.com]}, Action: ['sts:AssumeRole']}]}
+  GetConferenceTalksRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Principal: {Service: [lambda.amazonaws.com]}, Action: ['sts:AssumeRole']}]}
   WriteConnectFourMatchesPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
@@ -20,6 +24,12 @@ Resources:
       PolicyName: WriteConferenceTalksPolicy
       PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:BatchGetItem', 'dynamodb:BatchWriteItem', 'dynamodb:PutItem', 'dynamodb:DeleteItem', 'dynamodb:Scan', 'dynamodb:CreateBackup', 'dynamodb:DescribeStream', 'dynamodb:Query', 'dynamodb:UpdateItem', 'dynamodb:CreateTable', 'dynamodb:DescribeTable', 'dynamodb:GetShardIterator', 'dynamodb:RestoreTableFromBackup', 'dynamodb:GetItem', 'dynamodb:DescribeContinuousBackups', 'dynamodb:DeleteBackup', 'dynamodb:DescribeBackup', 'dynamodb:UpdateTable', 'dynamodb:GetRecords'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConferenceTalks'}}, {Effect: Allow, Action: ['dynamodb:DescribeReservedCapacityOfferings', 'dynamodb:TagResource', 'dynamodb:UntagResource', 'dynamodb:ListTables', 'dynamodb:DescribeReservedCapacity', 'dynamodb:ListBackups', 'dynamodb:PurchaseReservedCapacityOfferings', 'dynamodb:ListTagsOfResource', 'dynamodb:DescribeTimeToLive', 'dynamodb:DescribeLimits', 'dynamodb:ListStreams'], Resource: '*'}]}
       Roles: [!Ref AddConferenceTalkRole]
+  GetConferenceTalksPolicy:
+    Type: 'AWS::IAM::Policy'
+    Properties:
+      PolicyName: GetConferenceTalksPolicy
+      PolicyDocument: {Version: '2012-10-17', Statement: [{Effect: Allow, Action: ['dynamodb:DescribeTable', 'dynamodb:GetItem', 'dynamodb:GetRecords', 'dynamodb:Scan', 'dynamodb:Query'], Resource: {'Fn::Sub': 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/ConferenceTalks'}}]}
+      Roles: [!Ref GetConferenceTalksRole]
 Outputs:
   AddConnectFourMatchRole:
     Value: !GetAtt AddConnectFourMatchRole.Arn
@@ -29,3 +39,7 @@ Outputs:
     Value: !GetAtt AddConferenceTalkRole.Arn
     Export:
       Name: AddConferenceTalkRole
+  GetConferenceTalksRole:
+    Value: !GetAtt GetConferenceTalksRole.Arn
+    Export:
+      Name: GetConferenceTalksRole
